--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "discord-clone",
   "version": "0.1.0",
+  "license": "MIT",
+  "author": "Kalam",
   "private": true,
   "scripts": {
     "dev": "next dev",
